# media_center_kb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
docs/: wiring.qet
src/media_center_kb/: control.py  gpio.py  ha.py  kb.py  main.py  provider.py  relays.py  rpi.py
tests/: conftest.py  mocks.py  test_control.py  test_relays.py
